IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/11/09: In Etomo improved error reporting when retrieving rubberband and slicer
rotation values from 3dmod.

3/9/09: IMOD_4-0-7
3/9/09: In fine-grained dialog, added an option to see points with mesh
connections as squares in the Zap window, ability to change multiple selected
contours, and output of the general value for the current point or contour.

3/9/09: Added ability to define mesh connection numbers that block the mesh
from going to the end of one contour when meshing between two open contours,
or from filling a gap on one side when meshing between a contour with a gap
or open end and one without (see fine grain dialog help).

3/9/09: Added hot key O for toggling between open and closed contours; added
ability to toggle multiple selected contours with hot key or radio buttons,
and made the ends of the current contour have triangles instead of circles for
an open contour.

3/9/09: Fixed display of current point in model view to stay on model point in
model mode (In 3.13).

3/9/09: In Etomo - Fine Alignment, removed unnecessary error that was popping
up after Compute Alignment was run.

3/9/09: In Etomo, added the -fg option to run Etomo in the foreground.

3/5/09: In Etomo - NAD, prevented the use of huge test volumes.

3/6/09: Fixed Tiltxcorr's adjustment of shift for uncentered correlation box
to avoid division by 0 at 90 degrees (in 3.13).

3/5/09: IMOD_4-0-6
3/5/09: Fixed value set into global rotation spin box in Midas.

3/5/09: Etomo remembers position and size of log windows between sessions and
starts up with it offset from the main window.

3/5/09: Removed extensions from tomosnapshot name, may make it more mailable.

3/4/09: Changed Zap, Slicer, Xyz, and Locator windows to process mouse move
events when appropriate to avoid falling behind with events from tablet.

3/3/09: Changed Processchunks to handle up to 99999 com files and to avoid