@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>776</width>
-    <height>498</height>
+    <width>805</width>
+    <height>502</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -481,54 +481,36 @@
            <property name="title" >
             <string>Open</string>
            </property>
-           <layout class="QVBoxLayout" >
-            <property name="spacing" >
-             <number>6</number>
-            </property>
-            <property name="margin" >
-             <number>11</number>
-            </property>
+           <layout class="QVBoxLayout" name="verticalLayout_5" >
+            <item>
+             <widget class="QCheckBox" name="openXYZBox" >
+              <property name="text" >
+               <string>XYZ window</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="openModvBox" >
+              <property name="text" >
+               <string>Model View</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="openZapBox" >
+              <property name="text" >
+               <string>Zap window</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="openSlicerBox" >
+              <property name="text" >
+               <string>Slicer</string>
+              </property>
+             </widget>
+            </item>
            </layout>
-           <widget class="QWidget" name="" >
-            <property name="geometry" >
-             <rect>
-              <x>11</x>
-              <y>28</y>
-              <width>100</width>
-              <height>30</height>
-             </rect>
-            </property>
-            <layout class="QHBoxLayout" name="horizontalLayout_3" >
-             <item>
-              <widget class="QCheckBox" name="openSlicerBox" >
-               <property name="text" >
-                <string>Slicer</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="openModvBox" >
-               <property name="text" >
-                <string>Model View</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="openXYZBox" >
-               <property name="text" >
-                <string>XYZ window</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="openZapBox" >
-               <property name="text" >
-                <string>Zap window</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </widget>
           </widget>
          </item>
         </layout>
